--- a/resources/less/pdf.less
+++ b/resources/less/pdf.less
@@ -34,6 +34,7 @@
 .reveal.page .slides > section.future,  
 .reveal.page .slides > section.past,  
 .reveal.page .slides > section.present,  
+.reveal.page .slides section
 {
 	min-height: 0;
 	width: 700px;
